base/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: zcp-system
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    component: prometheus
spec:
  selector: 
    component: prometheus 
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
      protocol: TCP
