base/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-prometheus-ingress
  namespace: zcp-system
spec:
  rules:
  - host: base-prometheus.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
  tls:
  - secretName: cloudzcp-io-cert
    hosts:
    - base-prometheus.cloudzcp.io
